:bug:Fixed radio button out animation taking too long on navigation (#64)

--- a/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
+++ b/src/Components/Main/Question/QuestionTypes/MultipleChoice.css
@@ -22,6 +22,12 @@
   font-size: 26px;
 }
 
+.question-multiple-choice .css-1hhw7if-MuiSvgIcon-root {
+    /* Overwrite the out animation for the material UI radio button because on site change it doesn't unmount in time */
+    -webkit-transition: -webkit-transform 0ms cubic-bezier(0.4, 0, 1, 1) 0ms !important;
+    transition: transform 0ms cubic-bezier(0.4, 0, 1, 1) 0ms !important;
+}
+
 .question-multiple-choice .label-disabled{
   color: grey;
 }
